--- a/arms/build.gradle
+++ b/arms/build.gradle
@@ -115,7 +115,13 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["dagger2-compiler"]
     api rootProject.ext.dependencies["androideventbus"]
     api rootProject.ext.dependencies["gson"]
-
+    api rootProject.ext.dependencies["fragmentation"]
+    api rootProject.ext.dependencies["fragmentation-core"]
+    api rootProject.ext.dependencies["brvah"]
+    api rootProject.ext.dependencies["statusbarutil"]
+    api rootProject.ext.dependencies["agentweb"]
+    api rootProject.ext.dependencies["glide-transformations"]
+    api rootProject.ext.dependencies["gpuimage-library"]
     //test
     api rootProject.ext.dependencies["timber"]
     testImplementation rootProject.ext.dependencies["junit"]
