--- a/config.gradle
+++ b/config.gradle
@@ -18,7 +18,9 @@ ext {
             rxlifecycleSdkVersion   : "1.0",
             rxlifecycle2SdkVersion  : "2.2.1",
             espressoSdkVersion      : "3.0.1",
-            canarySdkVersion        : "1.5.4"
+            canarySdkVersion        : "1.5.4",
+            constraint              : "1.0.2",
+            fragmentationVersion    : "1.3.5"
     ]
 
     dependencies = [
@@ -91,6 +93,19 @@ ext {
             "progressmanager"          : "me.jessyan:progressmanager:1.5.0",
             "retrofit-url-manager"     : "me.jessyan:retrofit-url-manager:1.2.5",
             "lifecyclemodel"           : "me.jessyan:lifecyclemodel:1.0.1",
+            "fragmentation"            : "me.yokeyword:fragmentation:${version["fragmentationVersion"]}",
+            "fragmentation-core"       : "me.yokeyword:fragmentation-core:${version["fragmentationVersion"]}",
+            "fragmentation-swipeback"  : "me.yokeyword:fragmentation-swipeback:${version["fragmentationVersion"]}",
+            "systembartint"            : "com.readystatesoftware.systembartint:systembartint:1.0.3",
+            "agentweb"                 : "com.just.agentweb:agentweb:2.0.1",
+            "brvah"                    : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.32",
+            "FlycoSystemBar_Lib"       : "com.flyco.systembar:FlycoSystemBar_Lib:1.0.0@aar",
+            "glide-transformations"    : "jp.wasabeef:glide-transformations:3.0.1",
+            "gpuimage-library"         : "jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1",
+            "httplog"                  : "com.squareup.okhttp3:logging-interceptor:3.4.1",
+            "lombok"                   : "org.projectlombok:lombok:1.16.18",
+            "lombok-compiler"          : "org.projectlombok:lombok:1.16.18",
+            "statusbarutil"            : "com.jaeger.statusbarutil:library:1.5.1",
 
             //test
             "junit"                    : "junit:junit:4.12",
